Changed reliability of file paths, added link to homepage in sidebar, added an inactive part viewer in PartMaster.

--- a/ERP Solution/assets/style.css
+++ b/ERP Solution/assets/style.css
@@ -99,7 +99,7 @@ body.dark {
     transition: background-color 0.35s ease;
 }
 
-.sidebar h2 {
+.sidebar #sidebar-ERP-title {
     color: var(--sidebar-text);
     padding: 16px;
     margin: 0;
